--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,19 +1,12 @@
 .home {
-    background-color: #6a0572;
-    color: #f5f5f5;
-    padding: 20px;
-    border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 800px;
+  margin: 0 auto;
+  color: #333;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
 }
-
-nav ul li {
-    list-style-type: none;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #f5f5f5;
-  }
-  
-  nav ul li a:hover {
-    color: #a951c4;
-  } 
