--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,23 +1,13 @@
-nav {
-    margin: 20px 0;
-}
-
 nav ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     list-style-type: none;
-    padding: 0;
-}
-
-nav ul li {
-    list-style-type: none;
-}
-
-nav ul li a {
+    padding: 20px;
+  }
+  
+  nav ul li a {
     text-decoration: none;
-    color: #f5f5f5;
-}
-
-nav ul li a:hover {
-    color: #a951c4;
-}
+    color: #333;
+    font-size: 1.2em;
+  }
+  
